--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
         scroll-behavior:smooth;
     }
 
-    body{
-        font-family: 'Roxborough', serif;
-        background:linear-gradient(-45deg,#0f0f0f,#1c1c1c,#001f1f,#0a0a0a);
-        background-size:400% 400%;
-        animation:gradientMove 12s ease infinite;
-        color:white;
+    <style>
+body {
+    background: url('canva/heybg.jpg') no-repeat center center fixed;
+    background-size: cover;
+    color: white;
+    font-family: 'Poppins', Roxborough;
+}
+</style>
     }
 
         @keyframes gradientMove{
@@ -258,7 +260,7 @@
 </a>
 
 <footer>
-    © 2026 ABHI GRAPHICS | Designed with Passion
+    Â© 2026 ABHI GRAPHICS | Designed with Passion
 </footer>
 
 <script>
@@ -277,4 +279,5 @@
 </script>
 
 </body>
+
 </html>
