--- a/index.html
+++ b/index.html
@@ -21,14 +21,22 @@
     html{
         scroll-behavior:smooth;
     }
+           <style>
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            background-color: black; /* Pure black background */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white; /* Text color white */
+            font-family: Arial, sans-serif;
+        }
 
-    <style>
-body {
-    background: url('canva/heybg.jpg') no-repeat center center fixed;
-    background-size: cover;
-    color: white;
-    font-family: 'Poppins', Roxborough;
-}
+        h1 {
+            font-size: 3rem;
+        }
 </style>
     }
 
@@ -281,3 +289,4 @@ body {
 </body>
 
 </html>
+
