--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     body{
         min-height:100vh;
         /* Background Image + fallback black */
-        background: black url('images/heybg.jpg') no-repeat center center fixed;
+        background: url('images/heybg.jpg') no-repeat center center fixed;
         background-size: cover;
         color:white;
     }
@@ -201,3 +201,4 @@
 
 </body>
 </html>
+
