--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     body{
         min-height:100vh;
         /* Background Image + fallback black */
-        background: images url('images/heybg.jpg') no-repeat center center fixed;
+        background: black url('images/heybg.jpg') no-repeat center center fixed;
         background-size: cover;
         color:white;
     }
@@ -201,6 +201,7 @@
 
 </body>
 </html>
+
 
 
 
