--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <title>ABHI GRAPHICS | Cinematic Portfolio</title>
 
 <!-- FONT -->
+    }
+<style>
     .social-buttons{
     display:flex;
     gap:15px;
@@ -221,7 +223,8 @@
     </a>
     <body>
 
-<h1>Welcome to My Instagram</h1> 
+
+<h1>Instagram</h1> 
 <a href="https://instagram.com/official_m_r._abhi" target="_blank">
     <button class="insta-btn">Follow on Instagram</button>
 </a>
@@ -233,6 +236,7 @@
 
 </body>
 </html>
+
 
 
 
