--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     body{
         min-height:100vh;
         /* Background Image + fallback black */
-        background: black url('bg.jpg/heybg.jpg');
+        background: black url('bg.png/hey.png');
         background-positon:center;
         background-size: cover;
         background-repeat:no-repeat;
@@ -236,6 +236,7 @@
 
 </body>
 </html>
+
 
 
 
