--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
     }
 
     body{
-        min-height:100vh;
-        /* Background Image + fallback black */
-        background: black url('bg.png/hey.png');
-        background-positon:center;
-        background-size: cover;
-        background-repeat:no-repeat;
-        color:white;
-    }
+        <section class="hero"></section>
+        .hero{
+    height:100vh;
+    background-bg.png:url('bg.png/hey.png');
+    background-size:cover;
+    background-position:center;
+    background-repeat:no-repeat;
+}
 
     nav{
         display:flex;
@@ -236,6 +236,7 @@
 
 </body>
 </html>
+
 
 
 
