--- a/index.html
+++ b/index.html
@@ -161,38 +161,44 @@ footer{
     <h2>My Work</h2>
     <div class="portfolio">
 
-        <div class="card">
-            <img src="test.jpg/resturent.jpg" alt="">
-        </div>
-
-        <div class="card">
+       <div class="card"> 
+           <img src="test.jpg/resturent.jpg" alt=""> 
+           <h3>Restaurant Branding</h3>
+       </div> 
+        <div class="card"> 
             <img src="test.jpg/sumit mobile.jpg" alt="">
-        </div>
-
+            <h3>Mobile Shop Logo</h3> 
+        </div> <div class="card"> 
+            <img src="test.jpg/ziddi.jpg" alt=""> 
+            <h3>Automobile Workshop</h3>
+        </div> <div class="card">
+            <img src="test.jpg/as2.jpg" alt="">
+        </div> 
         <div class="card">
-            <img src="test.jpg/ziddi.jpg" alt="">
+            <img src="test.jpg/raja.jpg" alt=""> 
+        </div> 
+        <div class="card"> 
+            <img src="test.jpg/as1.jpg" alt="">
         </div>
-
-    </div>
-</section>
-
-<section class="section" id="pricing">
-    <h2>Pricing Plans</h2>
-    <div class="portfolio">
-        <div class="card">
-            <h3>Basic Logo</h3>
-            <p>₹499</p>
-        </div>
-        <div class="card">
-            <h3>Premium Logo</h3>
-            <p>₹1499</p>
-        </div>
-        <div class="card">
-            <h3>Full Branding</h3>
-            <p>₹4999</p>
-        </div>
-    </div>
-</section>
+    </div> 
+</section> 
+    <section class="section" id="pricing"> 
+        <h2>Pricing Plans</h2>
+        <div class="portfolio">
+            <div class="card"> 
+                <h3>Basic Logo</h3>
+                <p>₹499</p> 
+            </div>
+            <div class="card">
+                <h3>Premium Logo</h3>
+                <p>₹1499</p> 
+            </div> 
+            <div class="card"> 
+                <h3>Full Branding</h3>
+                <p>₹4999</p> 
+            </div> 
+       </div> 
+       </section>
 
 <section class="section" id="contact">
     <h2>Let's Work Together</h2>
@@ -215,4 +221,5 @@ footer{
 
 </body>
 </html>
+
 
