--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body{
 /* 🔥 HERO BACKGROUND */
 header{
     height:100vh;
-    background-bg.png:url('bg.png/hey.png');
+    background-image:url('bg.png/hey.png');
     background-size:cover;
     background-position:center;
     background-repeat:no-repeat;
@@ -221,5 +221,6 @@ footer{
 
 </body>
 </html>
+
 
 
