--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ body{
 
 /* 🔥 HERO BACKGROUND */
 header{
+    width:100%;
     height:100vh;
     background-image:url('bg.png/hey.png');
     background-size:cover;
@@ -221,6 +222,7 @@ footer{
 
 </body>
 </html>
+
 
 
 
