--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 html{
     scroll-behavior:smooth;
 }
+    
 
 body{
     background-color:black;
@@ -89,7 +90,7 @@ header p{
 }
 
 .section{
-    padding:80px 10%;
+    padding:100px 10%;
     text-align:center;
     background:black;
     color:white;
@@ -142,6 +143,7 @@ footer{
 </head>
 
 <body>
+    <section class="hero"></section>
 
 <nav>
     <h2>ABHI GRAPHICS</h2>
@@ -153,6 +155,7 @@ footer{
 </nav>
 
 <header>
+    <section class="hero"></section>
     <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
     <p>Modern Logo & Branding Designer for Growing Businesses</p>
     <a class="btn" href="#contact">Start Your Project</a>
@@ -222,6 +225,7 @@ footer{
 
 </body>
 </html>
+
 
 
 
