--- a/index.html
+++ b/index.html
@@ -15,16 +15,32 @@
     margin:0;
     padding:0;
     box-sizing:border-box;
-    font-family: 'Roxborough', serif;
+    font-family: 'Roxborough',serif;
 }
 
 html{
-    scroll-behavior: smooth;
+    scroll-behavior:smooth;
 }
+    
 
 body{
-    background-color: black;
-    color: white;
+    background-color:black;
+}
+
+/* 🔥 HERO BACKGROUND */
+header{
+    width:100%;
+    height:100vh;
+    background-image:url('bg.png/hey.png');
+    background-size:cover;
+    background-position:center;
+    background-repeat:no-repeat;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    padding:20px;
 }
 
 nav{
@@ -35,42 +51,80 @@ nav{
     backdrop-filter: blur(10px);
     position: sticky;
     top:0;
-    z-index: 1000;
+    z-index:10;
 }
 
 nav h2{
     color:#00ffc3;
+    letter-spacing:2px;
 }
 
 nav a{
     color:white;
     text-decoration:none;
     margin-left:20px;
+    font-size:15px;
 }
-
-.hero{
-    width:100%;
-    height:100vh;
+    .hero{
+        width:100%;
+    height:100vh; Full screen hero
+    background-image:url('bg.png/hey.png');
     background-size:cover;
     background-position:center;
     background-repeat:no-repeat;
+
+header h1{
+    font-size:48px;
+    background: linear-gradient(90deg,#00ffc3,#00aaff);
+    -webkit-background-clip:text;
+    color:transparent;
 }
 
-
-.section{
-    padding:80px 10%;
-    text-align:center;
+header p{
+    margin:20px 0;
+    color:#fff;
 }
 
 .btn{
-    display:inline-block;
     padding:12px 28px;
     background:#00ffc3;
     color:black;
     text-decoration:none;
     border-radius:30px;
     font-weight:bold;
-    margin-top:20px;
+}
+
+.section{
+    padding:100px 10%;
+    text-align:center;
+    background:black;
+    color:white;
+}
+
+.portfolio{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+    gap:25px;
+}
+
+.card{
+    background:rgba(255,255,255,0.05);
+    padding:20px;
+    border-radius:20px;
+}
+
+.card img{
+    width:100%;
+    border-radius:15px;
+}
+
+.insta-btn{
+    background:#E1306C;
+    color:white;
+    padding:12px 20px;
+    border:none;
+    border-radius:30px;
+    cursor:pointer;
 }
 
 footer{
@@ -95,7 +149,6 @@ footer{
 
 <body>
 
-
 <nav>
     <h2>ABHI GRAPHICS</h2>
     <div>
@@ -104,63 +157,68 @@ footer{
         <a href="#contact">Contact</a>
     </div>
 </nav>
-
-<section class="hero"></section>
+ <section class="hero"></section>
+<header>
+    <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
+    <p>Modern Logo & Branding Designer for Growing Businesses</p>
+    <a class="btn" href="#contact">Start Your Project</a>
+</header>
 
 <section class="section" id="portfolio">
     <h2>My Work</h2>
     <div class="portfolio">
-        <div class="card">
-            <img src="test.jpg/resturent.jpg" alt="Restaurant Branding">
-            <h3>Restaurant Branding</h3>
-        </div>
-        <div class="card">
-            <img src="test.jpg/sumit mobile.jpg" alt="Mobile Shop Logo">
-            <h3>Mobile Shop Logo</h3>
-        </div>
-        <div class="card">
-            <img src="test.jpg/ziddi.jpg" alt="Automobile Workshop">
+
+       <div class="card"> 
+           <img src="test.jpg/resturent.jpg" alt=""> 
+           <h3>Restaurant Branding</h3>
+       </div> 
+        <div class="card"> 
+            <img src="test.jpg/sumit mobile.jpg" alt="">
+            <h3>Mobile Shop Logo</h3> 
+        </div> <div class="card"> 
+            <img src="test.jpg/ziddi.jpg" alt=""> 
             <h3>Automobile Workshop</h3>
-        </div>
-        <div class="card">
+        </div> <div class="card">
             <img src="test.jpg/as2.jpg" alt="">
-        </div>
+        </div> 
         <div class="card">
-            <img src="test.jpg/raja.jpg" alt="">
-        </div>
-        <div class="card">
+            <img src="test.jpg/raja.jpg" alt=""> 
+        </div> 
+        <div class="card"> 
             <img src="test.jpg/as1.jpg" alt="">
         </div>
-    </div>
-</section>
-
-<section class="section" id="pricing">
-    <h2>Pricing Plans</h2>
-    <div class="portfolio">
-        <div class="card">
-            <h3>Basic Logo</h3>
-            <p>₹499</p>
-        </div>
-        <div class="card">
-            <h3>Premium Logo</h3>
-            <p>₹1499</p>
-        </div>
-        <div class="card">
-            <h3>Full Branding</h3>
-            <p>₹4999</p>
-        </div>
-    </div>
-</section>
+    </div> 
+</section> 
+    <section class="section" id="pricing"> 
+        <h2>Pricing Plans</h2>
+        <div class="portfolio">
+            <div class="card"> 
+                <h3>Basic Logo</h3>
+                <p>₹499</p> 
+            </div>
+            <div class="card">
+                <h3>Premium Logo</h3>
+                <p>₹1499</p> 
+            </div> 
+            <div class="card"> 
+                <h3>Full Branding</h3>
+                <p>₹4999</p> 
+            </div> 
+       </div> 
+       </section>
 
 <section class="section" id="contact">
     <h2>Let's Work Together</h2>
     <p style="margin-bottom:20px;">Ready to build your brand?</p>
+
     <a class="btn" href="https://wa.me/919171808503" target="_blank">
         Chat on WhatsApp
     </a>
+
     <br><br>
-    <a class="insta-btn" href="https://instagram.com/official_m_r._abhi" target="_blank">
-        Follow on Instagram
+
+    <a href="https://instagram.com/official_m_r._abhi" target="_blank">
+        <button class="insta-btn">Follow on Instagram</button>
     </a>
 </section>
 
