--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ABHI GRAPHICS | Cinematic Portfolio</title>
+    <title>ABHI GRAPHICS | Cinematic Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-@font-face {
-    font-family: 'Roxborough';
-    src: url('fonts/RoxboroughCF-Regular.ttf') format('truetype');
-}
+   <style>
 
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-    font-family: 'Roxborough',serif;
-}
+    /* ===== FONT IMPORT ===== */
+    @font-face {
+        font-family: 'Roxborough';
+        src: url('fonts/RoxboroughCF-Regular.ttf') format('truetype');
+    }
 
-html{
-    scroll-behavior:smooth;
-}
-    
+    *{
+        margin:0;
+        padding:0;
+        box-sizing:border-box;
+    }
 
-body{
-    background-color:black;
-}
+    html{
+        scroll-behavior:smooth;
+    }
 
-/* 🔥 HERO BACKGROUND */
-header{
-    width:100%;
+    body{
+        font-family: 'Roxborough', serif;
+        background:linear-gradient(-45deg,#0f0f0f,#1c1c1c,#001f1f,#0a0a0a);
+        background-size:400% 400%;
+        animation:gradientMove 12s ease infinite;
+        color:white;
+    }
+       .hero{
+           width:100%;
     height:100vh;
     background-image:url('bg.png/hey.png');
     background-size:cover;
@@ -43,110 +44,137 @@ header{
     padding:20px;
 }
 
-nav{
-    display:flex;
-    justify-content:space-between;
-    padding:20px 8%;
-    background: rgba(0,0,0,0.6);
-    backdrop-filter: blur(10px);
-    position: sticky;
-    top:0;
-    z-index:10;
-}
+        @keyframes gradientMove{
+            0%{background-position:0% 50%;}
+            50%{background-position:100% 50%;}
+            100%{background-position:0% 50%;}
+        }
 
-nav h2{
-    color:#00ffc3;
-    letter-spacing:2px;
-}
+        nav{
+            display:flex;
+            justify-content:space-between;
+            padding:20px 8%;
+            background:rgba(0,0,0,0.6);
+            backdrop-filter:blur(10px);
+            position:sticky;
+            top:0;
+        }
 
-nav a{
-    color:white;
-    text-decoration:none;
-    margin-left:20px;
-    font-size:15px;
-}
-    .hero{
-        width:100%;
-    height:100vh; Full screen hero
-    background-image:url('bg.png/hey.png');
-    background-size:cover;
-    background-position:center;
-    background-repeat:no-repeat;
+        nav h2{
+            color:#00ffc3;
+            letter-spacing:2px;
+        }
 
-header h1{
-    font-size:48px;
-    background: linear-gradient(90deg,#00ffc3,#00aaff);
-    -webkit-background-clip:text;
-    color:transparent;
-}
+        nav a{
+            color:white;
+            text-decoration:none;
+            margin-left:20px;
+            font-size:15px;
+        }
+       
 
-header p{
-    margin:20px 0;
-    color:#fff;
-}
+        header{
+            height:90vh;
+            display:flex;
+            justify-content:center;
+            align-items:center;
+            flex-direction:column;
+            text-align:center;
+            padding:20px;
+        }
 
-.btn{
-    padding:12px 28px;
-    background:#00ffc3;
-    color:black;
-    text-decoration:none;
-    border-radius:30px;
-    font-weight:bold;
-}
+        header h1{
+            font-size:48px;
+            background:linear-gradient(90deg,#00ffc3,#00aaff);
+            -webkit-background-clip:text;
+            color:transparent;
+        }
 
-.section{
-    padding:100px 10%;
-    text-align:center;
-    background:black;
-    color:white;
-}
+        header p{
+            margin:20px 0;
+            color:#ccc;
+        }
 
-.portfolio{
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-    gap:25px;
-}
+        .btn{
+            padding:12px 28px;
+            background:#00ffc3;
+            color:black;
+            text-decoration:none;
+            border-radius:30px;
+            font-weight:bold;
+            animation:pulse 2s infinite;
+        }
 
-.card{
-    background:rgba(255,255,255,0.05);
-    padding:20px;
-    border-radius:20px;
-}
+        @keyframes pulse{
+            0%{box-shadow:0 0 0 0 rgba(0,255,195,0.7);}
+            70%{box-shadow:0 0 0 15px rgba(0,255,195,0);}
+            100%{box-shadow:0 0 0 0 rgba(0,255,195,0);}
+        }
 
-.card img{
-    width:100%;
-    border-radius:15px;
-}
+        .section{
+            padding:80px 10%;
+            text-align:center;
+            opacity:0;
+            transform:translateY(60px);
+            transition:all 1s ease;
+        }
 
-.insta-btn{
-    background:#E1306C;
-    color:white;
-    padding:12px 20px;
-    border:none;
-    border-radius:30px;
-    cursor:pointer;
-}
+        .section h2{
+            margin-bottom:40px;
+            font-size:32px;
+        }
 
-footer{
-    text-align:center;
-    padding:30px;
-    background:black;
-    color:gray;
-}
+        .portfolio{
+            display:grid;
+            grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+            gap:25px;
+        }
 
-@media(max-width:768px){
-    nav{
-        flex-direction:column;
-        text-align:center;
-    }
-    header h1{
-        font-size:32px;
-    }
-}
+        .card, .price-box{
+            background:rgba(255,255,255,0.05);
+            backdrop-filter:blur(15px);
+            border:1px solid rgba(255,255,255,0.1);
+            padding:20px;
+            border-radius:20px;
+            transition:0.4s;
+        }
 
-</style>
+        .card:hover, .price-box:hover{
+            transform:translateY(-10px);
+            box-shadow:0 0 25px rgba(0,255,195,0.4);
+        }
+
+        .card img{
+            width:100%;
+            border-radius:15px;
+        }
+
+        .pricing{
+            display:flex;
+            flex-wrap:wrap;
+            justify-content:center;
+            gap:30px;
+        }
+
+        footer{
+            text-align:center;
+            padding:30px;
+            background:black;
+            color:gray;
+        }
+
+        @media(max-width:768px){
+            nav{
+                flex-direction:column;
+                text-align:center;
+            }
+            header h1{
+                font-size:32px;
+            }
+        }
+
+    </style>
 </head>
-
 <body>
 
 <nav>
@@ -157,7 +185,7 @@ footer{
         <a href="#contact">Contact</a>
     </div>
 </nav>
- <section class="hero"></section>
+
 <header>
     <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
     <p>Modern Logo & Branding Designer for Growing Businesses</p>
@@ -168,63 +196,100 @@ footer{
     <h2>My Work</h2>
     <div class="portfolio">
 
-       <div class="card"> 
-           <img src="test.jpg/resturent.jpg" alt=""> 
-           <h3>Restaurant Branding</h3>
-       </div> 
-        <div class="card"> 
-            <img src="test.jpg/sumit mobile.jpg" alt="">
-            <h3>Mobile Shop Logo</h3> 
-        </div> <div class="card"> 
-            <img src="test.jpg/ziddi.jpg" alt=""> 
-            <h3>Automobile Workshop</h3>
-        </div> <div class="card">
-            <img src="test.jpg/as2.jpg" alt="">
-        </div> 
         <div class="card">
-            <img src="test.jpg/raja.jpg" alt=""> 
-        </div> 
-        <div class="card"> 
-            <img src="test.jpg/as1.jpg" alt="">
+            <img src="test.jpg/resturent.jpg">
+            <h3>Restaurant Branding</h3>
         </div>
-    </div> 
-</section> 
-    <section class="section" id="pricing"> 
-        <h2>Pricing Plans</h2>
-        <div class="portfolio">
-            <div class="card"> 
-                <h3>Basic Logo</h3>
-                <p>₹499</p> 
-            </div>
-            <div class="card">
-                <h3>Premium Logo</h3>
-                <p>₹1499</p> 
-            </div> 
-            <div class="card"> 
-                <h3>Full Branding</h3>
-                <p>₹4999</p> 
-            </div> 
-       </div> 
-       </section>
+
+        <div class="card">
+            <img src="test.jpg/sumit mobile.jpg">
+            <h3>Mobile Shop Logo</h3>
+        </div>
+
+        <div class="card">
+            <img src="test.jpg/ziddi.jpg">
+            <h3>Automobile Workshop</h3>
+        </div>
+
+        <div class="card">
+            <img src="test.jpg/as2.jpg">
+        </div>
+
+   <div class="card">
+            <img src="test.jpg/raja.jpg">
+   </div>
+
+        <div class="card">
+<img src="test.jpg/as1.jpg">
+
+  </div>
+
+        <div class="card">
+<img src="test.jpg/neofit.jpg"> 
+  </div>
+
+        <div class="card">
+<img src="test.jpg/1.jpg">
+
+  </div>
+
+        <div class="card">
+<img src="test.jpg/ujwal.jpg">
+  </div>
+
+        <div class="card">
+<img src="test.jpg/sj.jpg">
+</section>
+
+<section class="section" id="pricing">
+    <h2>Pricing Plans</h2>
+    <div class="pricing">
+        <div class="price-box">
+            <h3>Basic Logo</h3>
+            <p>?499</p>
+        </div>
+        <div class="price-box">
+            <h3>Premium Logo</h3>
+            <p>?1499</p>
+        </div>
+        <div class="price-box">
+            <h3>Full Branding</h3>
+            <p>?4999</p>
+        </div>
+    </div>
+</section>
 
 <section class="section" id="contact">
     <h2>Let's Work Together</h2>
     <p style="margin-bottom:20px;">Ready to build your brand?</p>
-
     <a class="btn" href="https://wa.me/919171808503" target="_blank">
         Chat on WhatsApp
     </a>
-
-    <br><br>
-
-    <a href="https://instagram.com/official_m_r._abhi" target="_blank">
-        <button class="insta-btn">Follow on Instagram</button>
-    </a>
 </section>
+<br><br>
+
+<a class="insta-btn" href="https://instagram.com/official_m_r._abhi" target="_blank">
+    <i class="fa-brands fa-instagram"></i> Follow on Instagram
+</a>
 
 <footer>
     © 2026 ABHI GRAPHICS | Designed with Passion
 </footer>
+
+<script>
+    const observer = new IntersectionObserver(entries=>{
+        entries.forEach(entry=>{
+            if(entry.isIntersecting){
+                entry.target.style.opacity=1;
+                entry.target.style.transform="translateY(0)";
+            }
+        });
+    });
+
+    document.querySelectorAll('.section').forEach(section=>{
+        observer.observe(section);
+    });
+</script>
 
 </body>
 </html>
