--- a/index.html
+++ b/index.html
@@ -57,22 +57,6 @@
             margin-left:20px;
             font-size:15px;
         }
-       .hero{
-           width:100%;
-    height:100vh;
-    background-image:url('bg.png/hey.png');
-    background-size:cover;
-    background-position:center;
-    background-repeat:no-repeat;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items:center;
-    text-align:center;
-    padding:20px;
-       }
-       
-
         header{
             height:90vh;
             display:flex;
@@ -187,6 +171,9 @@
 </nav>
 
 <header>
+    <section class="home">
+        <div clas="home-img">
+            <img scr= "hey.png" alt="">
     <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
     <p>Modern Logo & Branding Designer for Growing Businesses</p>
     <a class="btn" href="#contact">Start Your Project</a>
@@ -293,4 +280,5 @@
 
 </body>
 </html>
+
 
