--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
             margin-left:20px;
             font-size:15px;
         }
+       width:100%;
+    height:100vh;
+    background-image:url('bg.png/hey.png');
+    background-size:cover;
+    background-position:center;
+    background-repeat:no-repeat;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    padding:20px;
+} 
         header{
             height:90vh;
             display:flex;
@@ -172,7 +185,7 @@
 
 <header>
     <section class="home">
-        <div clas="home-img">
+        <div class="home-img">
             <img scr= "hey.png" alt="">
     <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
     <p>Modern Logo & Branding Designer for Growing Businesses</p>
@@ -280,5 +293,6 @@
 
 </body>
 </html>
+
 
 
