--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             margin-left:20px;
             font-size:15px;
         }
+       .hero{
        width:100%;
     height:100vh;
     background-image:url('bg.png/hey.png');
@@ -184,9 +185,10 @@
 </nav>
 
 <header>
-    <section class="home">
-        <div class="home-img">
+    <section class="hero"></section>
+        <div class="hero-img">
             <img scr= "hey.png" alt="">
+            <section class="section" id="about">
     <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
     <p>Modern Logo & Branding Designer for Growing Businesses</p>
     <a class="btn" href="#contact">Start Your Project</a>
@@ -293,6 +295,7 @@
 
 </body>
 </html>
+
 
 
 
