--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         }
        .hero{
        width:100%;
-    height:100vh;
+    height:100vh; Full Screen
     background-image:url('bg.png/hey.png');
     background-size:cover;
     background-position:center;
@@ -295,6 +295,7 @@
 
 </body>
 </html>
+
 
 
 
