--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         }
        .hero{
        width:100%;
-    height:100vh; Full Screen
+    height:100vh;
     background-image:url('bg.png/hey.png');
-    background-size:cover;
+    background-size:contain;
     background-position:center;
     background-repeat:no-repeat;
     display:flex;
@@ -295,6 +295,7 @@
 
 </body>
 </html>
+
 
 
 
