--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
        width:100%;
     height:100vh;
     background-image:url('bg.png/hey.png');
-    background-size:contain;
+    background-size:cover;
     background-position:center;
     background-repeat:no-repeat;
     display:flex;
@@ -69,7 +69,7 @@
     justify-content:center;
     align-items:center;
     text-align:center;
-    padding:20px;
+    padding:50px;
 } 
         header{
             height:90vh;
@@ -295,6 +295,7 @@
 
 </body>
 </html>
+
 
 
 
