--- a/index.html
+++ b/index.html
@@ -64,13 +64,6 @@
     background-size:cover;
     background-position:center;
     background-repeat:no-repeat;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items:center;
-    text-align:center;
-    padding:50px;
-} 
         header{
             height:90vh;
             display:flex;
@@ -185,9 +178,8 @@
 </nav>
 
 <header>
-    <section class="hero"></section>
-        <div class="hero-img">
-            <img scr= "hey.png" alt="">
+    <section class="hero">
+            <img scr="bghey.png" alt="Hero Image">
             <section class="section" id="about">
     <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
     <p>Modern Logo & Branding Designer for Growing Businesses</p>
@@ -295,6 +287,7 @@
 
 </body>
 </html>
+
 
 
 
