--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
         background-size:400% 400%;
         animation:gradientMove 12s ease infinite;
         color:white;
+    }
+       .hero{
+    width:100%;
+    height:100vh;
+    background-image:url('bg/hey.png');
+    background-size:cover;
+    background-position:center;
+    background-repeat:no-repeat;
+}
+
+.section{
+    padding:80px 10%;
+    text-align:center;
 }
 
         @keyframes gradientMove{
@@ -57,13 +70,7 @@
             margin-left:20px;
             font-size:15px;
         }
-       .hero{
-       width:100%;
-    height:100vh;
-    background-image:url('bg.png/hey.png');
-    background-size:cover;
-    background-position:center;
-    background-repeat:no-repeat;
+
         header{
             height:90vh;
             display:flex;
@@ -178,9 +185,9 @@
 </nav>
 
 <header>
-    <section class="hero">
-            <img scr="bghey.png" alt="Hero Image">
-            <section class="section" id="about">
+    <section class="hero"></section>
+    <div class= "hero-png">
+        <img scr="hey.png" alt="">
     <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
     <p>Modern Logo & Branding Designer for Growing Businesses</p>
     <a class="btn" href="#contact">Start Your Project</a>
@@ -287,11 +294,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
