--- a/index.html
+++ b/index.html
@@ -186,8 +186,10 @@
 
 <header>
     <section class="hero"></section>
-    <div class= "hero-png">
+    <div class= "hero-img">
         <img scr="hey.png" alt="">
+    </div>
+    
     <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
     <p>Modern Logo & Branding Designer for Growing Businesses</p>
     <a class="btn" href="#contact">Start Your Project</a>
@@ -294,3 +296,4 @@
 
 </body>
 </html>
+
