--- a/index.html
+++ b/index.html
@@ -185,11 +185,9 @@
 </nav>
 
 <header>
-    <section class="hero"></section>
-    <div class= "hero-img">
-        <img scr="hey.png" alt="">
-    </div>
-    
+    <section id="home" class="hero-section">
+        <img scr="hey.png" alt="hey logo" class="hey-overlay">
+        <div class="hero-text">
     <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
     <p>Modern Logo & Branding Designer for Growing Businesses</p>
     <a class="btn" href="#contact">Start Your Project</a>
@@ -296,4 +294,5 @@
 
 </body>
 </html>
+
 
