--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 <header>
     <section id="home" class="hero-section">
-        <img scr="hey.png" alt="hey png" class="hey-overlay">
+        <img scr="hey.png" alt="hey.png" class="hey-overlay">
         <div class="hero-text">
     <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
     <p>Modern Logo & Branding Designer for Growing Businesses</p>
@@ -294,6 +294,7 @@
 
 </body>
 </html>
+
 
 
 
