--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        .hero{
     width:100%;
     height:100vh;
-    background-image:url('bg/hey.png');
+    background-image:url('hey.png');
     background-size:cover;
     background-position:center;
     background-repeat:no-repeat;
@@ -294,6 +294,7 @@
 
 </body>
 </html>
+
 
 
 
