--- a/index.html
+++ b/index.html
@@ -30,13 +30,23 @@
         color:white;
     }
        .hero{
-    width:100%;
-    height:100vh;
-    background-image:url('hey.png');
+    background-image:url('bg.png/hey.png');
     background-size:cover;
-    background-position:center;
-    background-repeat:no-repeat;
+    background-position:top center;
+           
+            background-repeat:no-repeat;
+           height:100vh;
+           position:relative;
 }
+       .hero-content{
+           position:absolute;
+           bottom:20%;
+
+           left:50%;
+           transform:translateX(-50%);
+           text-align:center;
+           color:white;
+       }
 
 .section{
     padding:80px 10%;
@@ -186,7 +196,7 @@
 
 <header>
     <section id="home" class="hero-section">
-        <img scr="hey.png" alt="hey.png" class="hey-overlay">
+        <img scr="hey.png" alt="" class="hey-overlay">
         <div class="hero-text">
     <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
     <p>Modern Logo & Branding Designer for Growing Businesses</p>
