--- a/index.html
+++ b/index.html
@@ -195,10 +195,14 @@
 </nav>
 
 <header>
-    <section id="home" class="hero-section">
-        <img scr="hey.png" alt="" class="hey-overlay">
-        <div class="hero-text">
-    <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
+  <section class="home">
+      <div class="home-img">
+          <img scr="hey.png" alt="">
+      </div>
+  <div class="home-content">
+  </div>
+
+          <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
     <p>Modern Logo & Branding Designer for Growing Businesses</p>
     <a class="btn" href="#contact">Start Your Project</a>
 </header>
@@ -304,6 +308,7 @@
 
 </body>
 </html>
+
 
 
 
