--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
 </nav>
 
 <header>
-  <section class="home">
-      <div class="home-img">
+  <section class="bg.jpg">
+      <div class="bg.jpg-img">
           <img scr="hey.png" alt="">
       </div>
-  <div class="home-content">
+  <div class="bg.jpg-content">
   </div>
 
           <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
@@ -308,6 +308,7 @@
 
 </body>
 </html>
+
 
 
 
