--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
 </nav>
 
 <header>
-  <section class="bg.jpg">
-      <div class="bg.jpg-img">
-          <img scr="hey.png" alt="">
+  <section class="hero">
+      <div class="bg.png-img">
+          <img scr="bg/hey.png" alt="hero-img">
       </div>
-  <div class="bg.jpg-content">
+  <div class="bg.png-content">
   </div>
 
           <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
@@ -308,6 +308,7 @@
 
 </body>
 </html>
+
 
 
 
