--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             align-items:center;
             flex-direction:column;
             text-align:center;
-            padding:20px;
+            padding:30px;
         }
 
         header h1{
@@ -197,11 +197,12 @@
 <header>
   <section class="hero">
       <div class="bg.png-img">
-          <img scr="bg/hey.png" alt="hero-img">
+          <img scr="bg/hey.png" alt="hero-img" class="hero-img">
+          
       </div>
   <div class="bg.png-content">
   </div>
-
+      <section class="section header-text">
           <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
     <p>Modern Logo & Branding Designer for Growing Businesses</p>
     <a class="btn" href="#contact">Start Your Project</a>
@@ -308,6 +309,7 @@
 
 </body>
 </html>
+
 
 
 
