--- a/index.html
+++ b/index.html
@@ -198,16 +198,8 @@
   <section class="hero">
       <div class="bg.png-img">
           <img scr="bg/hey.png" alt="hero-img" class="hero-img">
-          
-      </div>
-  <div class="bg.png-content">
-  </div>
-
-
-
-
-      
-       <section class="section header-text">
+  </section>
+    <section class="section header-text">
           <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
     <p>Modern Logo & Branding Designer for Growing Businesses</p>
     <a class="btn" href="#contact">Start Your Project</a>
@@ -314,6 +306,7 @@
 
 </body>
 </html>
+
 
 
 
