--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
   <section class="hero">
       <div class="bg.png-img">
           <img scr="bg/hey.png" alt="hero-img" class="hero-img">
+      </div>
+      <div class="bg.png-content">
+      </div>
   </section>
     <section class="section header-text">
           <h1>Design is not just what I do, it's what I live. Creative Designer</h1>
@@ -306,6 +309,7 @@
 
 </body>
 </html>
+
 
 
 
