--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
        }
 
 .section{
-    padding:80px 10%;
+    padding:50px 10%;
     text-align:center;
 }
 
@@ -96,11 +96,12 @@
             background:linear-gradient(90deg,#00ffc3,#00aaff);
             -webkit-background-clip:text;
             color:transparent;
+            margin-bottom:20px;
         }
 
         header p{
-            margin:20px 0;
             color:#ccc;
+             margin:20px 0;
         }
 
         .btn{
@@ -308,6 +309,7 @@
 
 </body>
 </html>
+
 
 
 
