--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             width: 100%;
             height: 100%;
             background-image: url('bg.png/hey.png');
-            background-size: cover !important;
-            background-position: center center !important;
+            background-size: contain !important;
+            background-position: center !important;
             background-repeat: no-repeat !important;
             z-index: 1;
             animation: cinematicMove10s-in-out infinite alternate;
@@ -510,3 +510,4 @@
     </script>
 </body>
 </html>
+
