--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
 
         .portfolio-item img {
             width: 100%;
-            height: 240px;
-            object-fit: cover;
+            height: auto;
+            object-fit: contain;
             border-radius: 18px;
             transition: all 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         }
@@ -510,4 +510,5 @@
     </script>
 </body>
 </html>
+
 
